[project]
name = "feistpy"
version = "1.1.0"
description = "Fiestel sampling for PyTorch"
requires-python = ">=3.8"
dependencies = ["pygfc~=1.0.5"]


[project.optional-dependencies]
test = ["pytest~=7.4.3", "torch", "numpy"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]


[tool.black]
line-length = 100
target-version = ['py38']


[tool.isort]
profile = "black"
